fdo#61789 - move metafile line width scaling somewhere more sensible.

Change-Id: Ied209fc26f4e1248608277b58bfe59014ad88776