drawinglayer/source/processor2d/vclprocessor2d.cxx
@@ -1350,7 +1350,7 @@ namespace drawinglayer
                     {
                         // #i101491# If the polygon complexity uses more than a given amount, do
                         // use OuputDevice::DrawPolyLine directly; this will avoid buffering all
-                        // decompositions in primtives (memory) and fallback to old line painting
+                        // decompositions in primitives (memory) and fallback to old line painting
                         // for very complex polygons, too
                         for(sal_uInt32 a(0); a < nCount; a++)
                         {
